# sing-box-web-panel

./: .env.example  .gitignore  .gitmodules  .releaserc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_RU.md  backend-description.md  go.mod  go.sum  tsconfig.json
.claude/: launch.json
.context/: backend-hysteria2-sublink-sin-67-2026-06-07.md  backend-implementation-2026-05-31.md  backend-naive-proxy-sin-68-2026-06-07.md  backend-remote-mutations-2026-06-04.md  backend-vps-smoke-followups-2026-06-03.md  frontend-auth-login-2fa-2026-05-30.md  frontend-description.md  frontend-fixes-2026-05-28.md  frontend-fixes-2026-05-29.md  frontend-mock-ui-2026-05-28.md  frontend-per-protocol-inbounds-2026-06-01.md  frontend-perf-optimization-2026-05-29.md  frontend-redesign-2026-06-02.md  frontend-rules.md  gitignore-refs-commit-merge-2026-06-03.md  installer-cli-polish-2026-06-07.md  installer-hardening-naive-fix-2026-06-02.md  installer-network-resilience-sin-54-2026-06-04.md  installer-piped-bootstrap-2026-06-07.md  sing-box-web-panel-plan.md  (+7 more)
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  cli.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  core.py  dashboard.py  inbounds.py  logs.py  settings.py  subscriptions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/services/: audit.py  config_generator.py  link_builder.py  logs.py  process_manager.py  traffic_worker.py
backend/app/tests/: test_link_builder.py
(+286 files in other folders)
