[project]
name = "sing-grok-backend"
version = "0.1.0"
description = "Local FastAPI control plane for sing-box"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "aiosqlite>=0.20.0",
  "pydantic-settings>=2.4.0",
  "passlib[argon2]>=1.7.4",
  "PyJWT>=2.9.0",
  "httpx>=0.27.0",
  "psutil>=6.0.0",
  "qrcode[pil]>=7.4.2",
  "alembic>=1.13.2"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
